--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
                     <nav class="gnb">
 
                         <h2 class="blind">메뉴</h2>
-
+                        <div class="repone_logo">
+                            <a href="" class="mob_logo"><img src="./images/logo.png" alt=""></a>
+                        </div>
 
                         <ul class="main_menu">
 
-                            <li class="gnb_menu"><a href=""><img src="./images/mob_gnb_menu.png" alt=""></a></li>
+
                             <li>
                                 <a href="/">브랜드</a>
                                 <ul class="sub">
