--- a/index.html
+++ b/index.html
@@ -33,14 +33,22 @@
 
                         <h2 class="blind">메뉴</h2>
                         <div class="repone_logo">
-                            <a href="" class="mob_logo"><img src="./images/logo.png" alt=""></a>
+                            <a href="" class="mob_logo"><img src="./images/mob_gnb_home.png" alt=""></a>
                         </div>
+
 
                         <ul class="main_menu">
 
 
-                            <li>
-                                <a href="/">브랜드</a>
+
+                            <li class="mob_bar_one">
+
+                                <a href="/">브랜드
+                                    <p class="sub_btn sub_one"><span></span></p>
+
+                                </a>
+
+
                                 <ul class="sub">
                                     <li><a href="">브랜드스토리</a></li>
                                     <li><a href="">경쟁력</a></li>
@@ -49,23 +57,29 @@
                                 </ul>
                             </li>
 
-                            <li>
-                                <a href="/">메뉴안내</a>
+                            <li class="mob_bar_two">
+                                <a href="/">메뉴안내
+                                    <p class="sub_btn sub_two"><span></span></p>
+                                </a>
                                 <ul class="sub">
                                     <li><a href="">식사메뉴</a></li>
                                     <li><a href="">요리메뉴</a></li>
                                 </ul>
                             </li>
 
-                            <li>
-                                <a href="/">매장안내</a>
+                            <li class="mob_bar_three">
+                                <a href="/">매장안내
+                                    <p class="sub_btn sub_three"><span></span></p>
+                                </a>
                                 <ul class="sub">
                                     <li><a href="">매장안내</a></li>
 
                                 </ul>
                             </li>
-                            <li>
-                                <a href="/">창업안내</a>
+                            <li class="mob_bar_four">
+                                <a href="/">창업안내
+                                    <p class="sub_btn sub_four"><span></span></p>
+                                </a>
                                 <ul class="sub">
                                     <li><a href="">창업절차 및 비용</a></li>
                                     <li><a href="">인테리어</a></li>
@@ -74,8 +88,10 @@
                                 </ul>
                             </li>
 
-                            <li>
-                                <a href="/">소식</a>
+                            <li class="mob_bar_five">
+                                <a href="/">소식
+                                    <p class="sub_btn sub_five"><span></span></p>
+                                </a>
                                 <ul class="sub">
                                     <li><a href="">공지사항</a></li>
 
