--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 
 
             <section class="shop_open">
+
                 <div class="inner">
                     <div class="shop_tit">
                         <h2>창업 안내</h2>
@@ -379,7 +380,7 @@
             </section>
 
 
-            <section class="cliam">
+            <!-- <section class="cliam">
 
 
                 <div class="cliam_tit">
@@ -433,7 +434,7 @@
                 <div class="btn">
                     <a href="">접수신청</a>
                 </div>
-            </section>
+            </section> -->
 
         </main>
 
